samples/_failures_safe/1761732004_1e6771_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b2fd7fd.c: In function ‘main’:
./samples/SAFE/__tmp_5b2fd7fd.c:171:9: error: expected expression at end of input
  171 |         if (input == -3)
      |         ^~
./samples/SAFE/__tmp_5b2fd7fd.c:171:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5b2fd7fd.c:171:9: error: expected declaration or statement at end of input
